@@ -1,28 +1,26 @@
 package com.collab.backend.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
+    @Value("${app.cors.allowed-origin}")
+    private String allowedOrigin;
+
     @Bean
     public CorsFilter corsFilter(){
         CorsConfiguration config = new CorsConfiguration();
-
         config.setAllowCredentials(true);
-
-        config.setAllowedOrigins(
-                Arrays.asList(
-                        "http://localhost:5173",
-                        "http://localhost:3000",
-                        "http://localhost:5500"
-                )
-        );
+        config.setAllowedOrigins(Collections.singletonList(allowedOrigin));
 
         // Restrict allowed and exposed headers for better security
         config.setAllowedHeaders(Arrays.asList(
@@ -33,9 +31,7 @@ public class CorsConfig {
                 "X-Requested-With"
         ));
 
-        config.setExposedHeaders(Arrays.asList(
-                "Authorization"
-        ));
+        config.setExposedHeaders(List.of("Authorization"));
 
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
